optimize on mobile and fix structure

--- a/src/scss/base/_buttons.scss
+++ b/src/scss/base/_buttons.scss
@@ -7,8 +7,8 @@
     cursor: pointer;
     border: none;
     position: fixed;
-    bottom: 500px;
-    right: 150px;
+    bottom: 10%;
+    right: 5%;
     font-size: 2em;
     color: rgba(103, 195, 243, 0.65);
     background: none;
