--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,7 +1,8 @@
 .container {
   @include flex-center-x;
   position: relative;
-  width: 100%;
+  max-width: $max-width;
+  margin: auto;
   height: 100%;
 }
 
