--- a/src/scss/responsive/_footer.scss
+++ b/src/scss/responsive/_footer.scss
@@ -6,6 +6,7 @@
     }
     @media only screen and (max-width: $mobileMax) {
       grid-template-columns: 1fr;
+      padding: 40px 0px;
     }
   }
   &__trademark {
