--- a/src/scss/responsive/_header.scss
+++ b/src/scss/responsive/_header.scss
@@ -8,7 +8,7 @@
       padding: 0 40px;
     }
     @media only screen and (max-width: $mobileMax) {
-      padding: 0 20px;
+      padding: 0 0;
     }
   }
   &__nav {
@@ -24,7 +24,6 @@
       right: -70%;
       width: 70%;
       height: 100vh;
-      margin: 0;
       background-color: $color-background-nav-mobile;
       transition: all 1s ease-in-out;
       &-list-items {
@@ -38,7 +37,7 @@
   }
   &__nav-show {
     @media only screen and (max-width: $mobileMax) {
-      right: 0;
+      right: 0px;
     }
   }
   &__menu {
