--- a/src/scss/responsive/_introduce.scss
+++ b/src/scss/responsive/_introduce.scss
@@ -4,7 +4,7 @@
       padding: 110px 20px 50px 20px;
     }
     @media only screen and (max-width: $mobileMax) {
-      padding: 110px 20px 50px 20px;
+      padding: 110px 0 50px 0;
       grid-template-rows: repeat(2, 1fr);
       row-gap: 40px;
     }
