--- a/src/scss/responsive/_our-services.scss
+++ b/src/scss/responsive/_our-services.scss
@@ -4,7 +4,7 @@
       padding: 60px 80px;
     }
     @media only screen and (max-width: $mobileMax) {
-      padding: 60px 20px;
+      padding: 60px 0;
     }
   }
   &__top {
